fixed ordered lists, numbers don't spill

--- a/style.css
+++ b/style.css
@@ -81,3 +81,7 @@ footer .motto {
 li {
     margin-left: 25px;
 }
+
+ol {
+    list-style-position: inside;
+}
